ripple fix bug add gap between the checkbox and input in example

--- a/src/assets/examples/ripple-overview/ripple-overview.component.css
+++ b/src/assets/examples/ripple-overview/ripple-overview.component.css
@@ -19,16 +19,17 @@
 
 /** Styles to make the demo look better. */
 .example-ripple-checkbox {
-  margin: 6px 12px 6px 0;
+  margin: 6px 24px 6px 0;
 }
 
 .example-ripple-form-field {
-  margin: 0 12px 0 0;
+  margin: 0 24px 0 0;
 }
 
 .example-controller {
   text-align: left;
-  width: 400px;
+  width: 420px;
   padding-left: 40px;
   white-space: normal;
 }
+
